# Skripsie-project-Oscar-Calitz-23106131

./: CMakeLists.txt  README.md  app.overlay  mesh.c  prj.conf
include/: GPIO.h  initdata.h  mesh.h  sensors.h  uart_comm.h
src/: GPIO.c  main.c  mesh.c  sensors.c  uart_comm.c
